sql/test/error/error6.exp


select * from t1 group by 2;
       ^
       |
        ----- ERROR
Error: line 3, characters 8-8:
GROUP BY out of bounds
